# taskmanager

./: .env.example  .gitignore  README.md  main.py
taskmanager/: pyproject.toml
taskmanager/src/taskmanager/: api.py  database.py  main.py
taskmanager/src/taskmanager/agent/: taskmanager.py  tools.py
taskmanager/src/taskmanager/models/: task.py
